# test-case

./: .env.example  .gitignore  AI_USAGE.md  CLAUDE.md  KNOWN_LIMITATIONS.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  db.py  logging_config.py  main.py
backend/app/api/: chat.py  health.py  knowledge.py  products.py  quotes.py  search.py
backend/app/chat/: fallback.py  orchestrator.py  prompts.py  schemas.py  tools.py
backend/app/knowledge/: __init__.py  schemas.py
backend/app/models/: __init__.py  chat.py  knowledge_entry.py  product.py  quote.py
backend/app/products/: __init__.py  schemas.py
backend/app/quotes/: __init__.py  schemas.py  service.py
backend/app/retrieval/: __init__.py  embedding.py  queries.py  schemas.py  service.py
backend/app/seed/: data.py  seed.py
backend/tests/: conftest.py  test_business_rules.py  test_chat_fallback.py  test_chat_tools.py  test_fallback_grounding.py  test_health.py  test_knowledge_endpoint.py  test_products_endpoint.py  test_quotes_endpoint.py  test_retrieval.py
mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: session.ts  types.ts
mobile/src/api/: chat.ts  client.ts  quotes.ts
mobile/src/components/: ActionToast.tsx  ChatBubble.tsx  (+2 more)
web/: Dockerfile  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  session.ts  styles.css  types.ts
(+20 files in other folders)
