[project]
name = "salesai-backend"
version = "0.1.0"
description = "B2B sales assistant backend (FastAPI + pgvector + OpenAI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy>=2.0.30,<3.0",
    "alembic>=1.13.0,<2.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "pgvector>=0.3.0,<1.0",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "openai>=1.40.0,<2.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
